--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapActivity"></activity>
+        <activity android:name=".DetailActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
